--- a/src/app/mainpage/backoffice/backoffice.component.html
+++ b/src/app/mainpage/backoffice/backoffice.component.html
@@ -25,7 +25,7 @@
         <form action="">
 
             <div class="form-group">
-                <input type="time" name="subject" [(ngModel)]="publication.subject" placeholder=" Titulo do servico" >
+                <input type="text" name="subject" [(ngModel)]="publication.subject" placeholder=" Titulo do servico" >
             </div>
             <div class="form-group">
               <textarea name="message" [(ngModel)]="publication.body" class="form-control" rows="5"
