--- a/src/app/portal/login/login.component.html
+++ b/src/app/portal/login/login.component.html
@@ -29,16 +29,16 @@
                 <div class="line"></div> -->
                </div>
 
-               <div class="social-login">
+               <!-- <div class="social-login">
                 <button class="google">
                    <i class='bx bxl-google'></i>
                    Iniciar sessão com conta google
                 </button>
-               </div>
+               </div> -->
 
             <div class="links">
                 <!--<a href="#">Recuperar palavra-passe</a>-->
-                <a href="#">Registar-se agora</a>
+                <a [routerLink]="['/portal/registro']">Registar-se agora</a>
             </div>
         </form>
     </div>
