--- a/src/app/portal/portal/portal.component.html
+++ b/src/app/portal/portal/portal.component.html
@@ -8,49 +8,68 @@
 <header>
 <div class="left">
     <h1>Seja bem-vindo a <span>ProtecFree</span></h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, 
-        optio similique Se tiver mais espaço mellhor pra tropa?</p>
+    <p>Faça parte de uma comunidade que se preocupa com você. Junte-se à nossa plataforma,
+        freelancers e empresas podem trabalhar juntos com tranquilidade
+    </p>
         <div class="butti">
-        <a href="#"> 
+        <a [routerLink]="['/portal/registro']"> 
             <span>Criar conta agora</span>
             <i class='bx bx-right-arrow-alt'></i>
         </a>
 
     </div>
 </div>
-<img src="#">
+<img src="../../../assets/img/header.png">
 </header>
 
 <div class="sell-nft">
 <div class="item">
     <div class="header">
-         <i class='bx bx-shield-minus'></i>
-        <h5>Segurança</h5>
+        <i class='bx bx-universal-access'></i>
+        <h5>Networking</h5>
     </div>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis 
-        culpa, necessitatibus aspernatur doloremque quaerat praesentium velit 
-        accusantium possimus?.</p>
+    <p>Amplie sua rede de contatos e faça conexões valiosas com 
+        empresas de todo o país. Oportunidades únicas de networking 
+        para expandir suas oportunidades de negócios e colaborações.</p>
 </div>
 
 <div class="item">
   <div class="header">
      <i class='bx bx-signal-5'></i>
-      <h5>Confiança</h5>
+      <h5>Crescimento</h5>
   </div>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis 
-      culpa, necessitatibus aspernatur doloremque quaerat praesentium velit 
-      accusantium possimus?.</p>
+  <p>Junte-se a uma comunidade onde a transparência é 
+    valorizada e as relações são construídas com base na 
+    confiança mútua.Nossa plataforma promove uma cultura de colaboração.</p>
 </div>
 
 <div class="item">
 <div class="header">
     <i class='bx bx-leaf'></i>
-    <h5>Ganhos</h5>
+    <h5>Resolução</h5>
 </div>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis 
-    culpa, necessitatibus aspernatur doloremque quaerat praesentium velit 
-    accusantium possimus?.</p>
+<p>Em caso de disputas ou mal-entendidos, nossa equipe de 
+    suporte está pronta para intervir e resolver o problema de forma 
+    justa e imparcial, garantindo que você possa focar no que faz de melhor sem preocupações.</p>
 </div>
 </div>
+
+
+<footer>
+    <div class="right">
+        <div class="links">
+           
+            <a href="#">Inicio</a>
+            <a href="#">Sobre</a>
+            <a href="#">Contacte-nos</a>
+            <a href="#">Privacy Policy</a>
+        </div>
+        <div class="social">
+            <i class='bx bxl-instagram'></i>
+            <i class='bx bxl-facebook-square'></i>
+        </div>
+        <p>Copyright © 2024 Mauricio Domingos, Todos Direitos Reservados.</p>
+    </div>
+</footer> 
 
 
