--- a/src/app/mainpage/headertwo/headertwo.component.html
+++ b/src/app/mainpage/headertwo/headertwo.component.html
@@ -7,13 +7,13 @@
 
 <div class="sidebar">
     <a href="#" class="logo">
-        <i class='bx bxs-parking'></i>
+        <!-- <i class='bx bxs-parking'></i> -->
         <div class="logo-name">ProtecFree</div>
     </a>
     <ul class="side-menu">
-        <li  class="active"><a href="index.html"><i class='bx bx-home'></i>Início</a></li>
-        <li><a href="#"><i class='bx bx-face'></i>Minha Conta</a></li>
-        <li><a href="#"><i class='bx bx-calendar-check'></i>Portifólio</a></li>
+        <li  class="active"><a [routerLink]="['/area_de_trabalho/freelance_trabalho']"><i class='bx bx-home'></i>Início</a></li>
+        <li><a [routerLink]="['/area_de_trabalho/perfil_usuario']"><i class='bx bx-face'></i>Minha Conta</a></li>
+        <li><a href="#"><i class='bx bx-calendar-check'></i>Contratos</a></li>
         <li><a href="#"><i class='bx bx-money-withdraw'></i>Finança</a></li>
         <li><a href="users.html"><i class='bx bx-group'></i>Usuários</a></li>
         <li><a href="denuciat.html"><i class='bx bx-detail'></i>Denunciar</a></li>
