--- a/src/app/mainpage/perfil/perfil.component.css
+++ b/src/app/mainpage/perfil/perfil.component.css
@@ -1,21 +1,59 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
+a {
+    text-decoration: none;
+}
 
+.containe {
+    width: 100%;
+    height: 100vh;
+    background-image: white;
+    /* border:  1px solid rgba(0, 0, 0, 0.2); */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #000;
+}
 
-.aditional a{
-    background: transparent;
-    color: #1976D2;
-    border: 1px solid #1976D2;
+.card {
+    width: 540px;
+    background-color: #FFF;
     border-radius: 5px;
-   font-size: 11px;
-   padding: 8px;
-   transition: all 0.3d ease;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border:  1px solid rgba(0, 0, 0, 0.2);
 }
-.aditional a:hover{
-    background:#2586e7;
-    color: #fff;
-    border: none;
- 
+
+.profile-img {
+    width: 120px;
+    border-radius: 50%;
+    border: 2px solid rgba(0, 0, 0, 0.2);
+    transform: translateY(-65px);
 }
+
+.container-text {
+    margin-top: -40px;
+}
+
+h4.name {
+    margin: 0;
+
+}
+
+h6.desc {
+    margin-top: 10px;
+    font-weight: 400;
+    text-align: center;
+  
+}
+
+.address-icon {
+    width: 24px;
+    filter: brightness(15);
+}
+
+
+
+
 
 p{
     font-size: 0.76rem;
@@ -334,8 +372,8 @@ body{
     flex-wrap: wrap;
 }
 .content main .searchResponse{
-    display: none !important; 
     margin-bottom: -11px;
+    /* display: none; */
     display: flex;
     flex-direction: row;
     padding: 2px;
@@ -882,40 +920,92 @@ margin-top: 30px;
     /* text-decoration: underline; */
     color: rgb(0, 69, 219);
 }
-.form-title input{
-    width: 100%;
-    margin-bottom: 5px;
-    outline: none;
-    border: 1px solid rgba(0,0,0,.3);
-    padding: 5px;
-    border-radius: 5px;
-}
+ /* ---------------------------------------------------------------------------*/
+ .card{
+    width: 70% !important;
+ }
 
-    .publicService{
-       display: flex;
-       align-items: center;
-       justify-content: left;
-       width: 100%;
-       gap: 20px;
-    }
-    .publicService select{
-        background: #fff;
-        border: 1px solid rgba(0,0,0,.3);
-        padding: 3px;
-        border-radius: 5px;
-    }
-    .publicService input{
+ /* ------------------------------------------------------ */
+ .firstinfo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 40px;
+    margin-right: 250px;
+    width: 100%;
+    
+ }
+ .firstinfo .user{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 40px;
+ }
+ .user .separatorInfo{
+    width: 100%;
+    margin-right: 30px;
+   
+ }
+
+
+ .user .separatorInfo h5{
+   font-size: 18px;
+   margin-bottom: 0px;
+ }
+ .user .separatorInfo h6{
+    font-size: 14px;
+    font-weight: 300;
+    
+    
+  }
+ 
+ .user .separatorTwo{
+    width: 100%;
+   
+ }
+ .firstinfo img {
+    width: 180px;
+    border-radius: 50%;
+    border: 2px solid rgba(0, 0, 0, 0.2);
+    transform: translateY(-65px);
+    margin-top: 20px;
+    margin-bottom: -40px;
+}
+.texto{
+    background: #fff;
+    border: 1px solid rgba(0,0,0,.1);
+    margin-top: 12px;
+    padding: 20px;
+    border-radius: 5px;
+    width: 90%;
+    margin-left: 40px;
+}
+.buttons{
+    display: flex;
+    align-items: start;
+    justify-content: start;
+    flex-direction: row;
+    gap: 20px;
+    margin-top: 30px;
+}
+.buttons button{
+    border: none;
+    font-size: 11px;
+    padding: 7px;
     background: #1976D2;
     color: #fff;
     border-radius: 5px;
-    border: none;
-    padding: 3px;
-    width: 20%;
-    }
-
-    .publicService input:hover{
-        background: #2586e7;
-        }
+}
+.buttons button a{
+   
+    color: #fff;
+    
+}
+.buttons button:hover{
+    
+    background: #2586e7;
+   
+}
 @media screen and (max-width: 768px) {
     .sidebar{
         width: 200px;
