--- a/src/app/portal/header/header.component.html
+++ b/src/app/portal/header/header.component.html
@@ -15,7 +15,7 @@
       <div class="collapse navbar-collapse nav-list" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link me-3 list" aria-current="page" href="#">Início</a>
+            <a class="nav-link me-3 list" [routerLink]="['/portal']">Início</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle list-service" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
