--- a/src/app/portal/portal/portal.component.css
+++ b/src/app/portal/portal/portal.component.css
@@ -83,7 +83,7 @@
     color: #777;
   }
   header img{
-    width: 550px;
+    width: 500px;
   }
   header .left a {
     display: flex;
@@ -143,6 +143,63 @@
  margin-top: 10px;
  padding: 0 4px;
   }
+
+  footer{
+    background-color: #000;
+    color: #fff;
+    padding: 100px 80px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+footer h3{
+    font-size: 48px;
+}
+
+footer .right{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 26px;
+}
+
+footer .right .links{
+    display: flex;
+    gap: 30px;
+}
+
+footer .right .links a{
+    color: #989898;
+    transition: color 0.3s ease;
+}
+
+footer .right .links a:hover{
+    color: #fff;
+}
+
+footer .right .social{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+footer .right .social i{
+    font-size: 30px;
+    cursor: pointer;
+    transition: color 0.3s ease;
+}
+
+footer .right .social i:hover{
+    color: #1976D2;
+}
+
+footer .right p{
+    font-size: 13px;
+    color: #777;
+}
+
 
 
   @media screen and (max-width: 1200px){
