--- a/src/app/portal/register-company/register-company.component.css
+++ b/src/app/portal/register-company/register-company.component.css
@@ -22,8 +22,13 @@
   outline: none !important;
 }
 #phone{
-  width: 30% !important;
+  width: 35% !important; 
 } 
+
+.areaRegister input:focus{
+  box-shadow: none !important;
+  border-bottom-width:2px !important;
+}
 
 
 
