--- a/src/app/portal/register/register.component.html
+++ b/src/app/portal/register/register.component.html
@@ -19,7 +19,7 @@
           </div>
         <div class="col-md-6">
           <label for="phone" class="form-label">Nº de Telefone</label>
-          <input type="text" class="form-control phones" [(ngModel)]="userFree.phone" name="phone" placeholder="9XXXXXXXXX" maxlength="9">
+          <input type="text" class="form-control" id="phone" [(ngModel)]="userFree.phone" name="phone" placeholder="9XXXXXXXXX" maxlength="9">
         </div>
         <div class="col-md-6">
           <label for="userName" class="form-label">Nome de Usuário</label>
@@ -63,7 +63,7 @@
         </div>
         <div class="col-md-3">
             <label for="inputProfi" class="form-label">Profissão</label>
-            <select [(ngModel)]="userFree.id_speciality" name="id_speciality" class="form-select">
+            <select  class="form-select">
               <option selected>Selecione</option>
               <option value="1">Designer</option>
               <option value="2">Programador</option>
@@ -77,7 +77,7 @@
           </div>
           <div class="col-md-3">
             <label for="inputEsp" class="form-label">Especialidade</label>
-            <select  class="form-select">
+            <select [(ngModel)]="userFree.id_speciality" name="id_speciality" class="form-select">
               <option selected>Selecione</option>
               <option value="1">Designer Gráfico</option>
               <option value="2">Mídia Designer</option>
