--- a/src/app/mainpage/backoffice/backoffice.component.html
+++ b/src/app/mainpage/backoffice/backoffice.component.html
@@ -80,7 +80,7 @@
                 <tbody>
                     <tr>
                         <td>
-                            <img src="images/passe.jpg">
+                            <img src="../../../assets/img/download (1).png">
                             <p>Mauro Bete</p>
                         </td>
                         <td>14-08-2023</td>
@@ -88,7 +88,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <img src="images/passe.jpg">
+                            <img src="../../../assets/img/download (1).png">
                             <p>Osvaldo Pedro</p>
                         </td>
                         <td>14-08-2023</td>
@@ -96,7 +96,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <img src="images/passe.jpg">
+                            <img src="../../../assets/img/download (1).png">
                             <p>Maria Sousa</p>
                         </td>
                         <td>14-08-2023</td>
