--- a/src/app/mainpage/headertwo/headertwo.component.html
+++ b/src/app/mainpage/headertwo/headertwo.component.html
@@ -56,7 +56,7 @@
         </a>
 
         <a href="#" class="profile">
-            <img src="images/passe.jpg">
+            <img src="../../../assets/img/download (1).png">
         </a>
     </nav>
 </div>
