this commit fix login localStorager

--- a/src/app/mainpage/headertwo/headertwo.component.html
+++ b/src/app/mainpage/headertwo/headertwo.component.html
@@ -21,7 +21,7 @@
     </ul>
     <ul class="side-menu">
         <li>
-            <a href="#" class="logout">
+            <a href="#" (click)="logout()" class="logout">
                 <i class='bx bx-log-out-circle'></i>
                 Sair
             </a>
