--- a/src/app/mainpage/perfil/perfil.component.html
+++ b/src/app/mainpage/perfil/perfil.component.html
@@ -12,10 +12,10 @@
             <div class="firstinfo">
                 <div class="user">
                     <div class="separatorInfo">
-                        <img src="../../../assets/img/profile-1.png">
+                        <img src="../../../assets/img/download (1).png">
                         <div class="nameProfission">
-                            <h5>Mauricio Domingos</h5>
-                            <h6>Programador</h6>
+                            <h5>{{ nameUser }}</h5>
+                            <h6>{{ specialitys }}</h6>
                             <div class="buttons">
                              <button>Enviar mensagem</button>
                              <button><a [routerLink]="['/area_de_trabalho/contrato']">Efectuar contrato</a></button>
